# code-credit-diff-analyzer

./: Cargo.toml  README.md  app.py  compile-macos.sh  process-target.sh
fixtures/: example.diff  rustball.diff
src/: analyzer.rs  diff.rs  lib.rs  main.rs  models.rs
src/parser/: models.rs  parser.rs
