[package]
name = "code-credit-diff-analyzer"
version = "0.1.0"
authors = ["Kevin Galang <kevingalang@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "code_credit_diff"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]

[dependencies]
regex = "1"
lazy_static = "1.4.0"
unidiff = "0.3.3"

